[gd_scene load_steps=2 format=3 uid="uid://b10ayuw5xeyub"]

[ext_resource type="Script" path="res://Scenes/HUD/In_Game/In_Game.gd" id="1_w60an"]

[node name="InGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w60an")
metadata/_edit_lock_ = true

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Score : "
metadata/_edit_lock_ = true

[node name="Score_nb" type="Label" parent="ScoreLabel"]
layout_mode = 1
offset_left = 60.0
offset_top = 1.0
offset_right = 120.0
offset_bottom = 17.0
size_flags_horizontal = 0
size_flags_vertical = 1
metadata/_edit_lock_ = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="KillLabel" type="Label" parent="."]
layout_mode = 1
offset_left = 400.0
offset_top = 10.0
offset_right = 460.0
offset_bottom = 26.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "Kills : "

[node name="Kill_nb" type="Label" parent="KillLabel"]
layout_mode = 1
offset_left = 41.0
offset_right = 101.0
offset_bottom = 16.0
size_flags_horizontal = 0
size_flags_vertical = 1
text = "0000"

[connection signal="timeout" from="ScoreTimer" to="." method="_on_timer_timeout"]
